# move-test

./: .gitignore  environment.yml  meson.build  meson.options  requirements.txt  test.f90
.github/workflows/: test.yml
src/: meson.build  string.f90  test.f90
test/: meson.build  tester.f90  teststring.f90
